fixed bookmark issue

--- a/src/app/components/bookmark/bookmarked-movies/bookmarked-movies.component.html
+++ b/src/app/components/bookmark/bookmarked-movies/bookmarked-movies.component.html
@@ -9,6 +9,7 @@
     [movieRating]="movie.rating"
     [movieName]="movie.title"
     [movieImage]="movie.thumbnail.regular.large"
+    [importedBookMarkState]="movie.isBookmarked"
   ></app-recommended-movie>
   } }
 </section>
