--- a/src/app/components/bookmark/bookmarked-tv/bookmarked-tv.component.html
+++ b/src/app/components/bookmark/bookmarked-tv/bookmarked-tv.component.html
@@ -9,6 +9,7 @@
     [movieRating]="tv.rating"
     [movieName]="tv.title"
     [movieImage]="tv.thumbnail.regular.large"
+    [importedBookMarkState]="tv.isBookmarked"
   ></app-recommended-movie>
   } }
 </section>
