--- a/src/app/components/home/trending/trending-movie/trending-movie/trending-movie.component.html
+++ b/src/app/components/home/trending/trending-movie/trending-movie/trending-movie.component.html
@@ -19,34 +19,13 @@
           }
     "
   >
-    @if(bookMarkState === false && bookMarkHover === false){
     <img
-      src="assets/trending/normal-book-mark.svg"
-      alt="bookmark-empty"
-      (mouseover)="toggleBookMarkState('hover')"
+      [src]="getBookmarkIcon()"
+      alt="bookmark"
+      (mouseover)="setBookmarkHover(true)"
+      (mouseout)="setBookmarkHover(false)"
+      (click)="toggleBookmark()"
     />
-    } @else if(bookMarkHover === true && bookMarkState == true){
-    <img
-      src="assets/trending/white-book-mark.svg"
-      alt="bookmark-hover"
-      (mouseout)="toggleBookMarkState('bookmark')"
-      (click)="toggleBookMarkState('remove-bookmark')"
-    />
-    } @else if(bookMarkHover === true && bookMarkState == false){
-    <img
-      src="assets/trending/white-book-mark.svg"
-      alt="bookmark-hover"
-      (mouseout)="toggleBookMarkState('normal')"
-      (click)="toggleBookMarkState('bookmark')"
-    />
-    } @else if(bookMarkState === true){
-    <img
-      src="assets/trending/book-mark.svg"
-      alt="bookmark-hover"
-      (mouseout)="toggleBookMarkState('bookmark')"
-      (click)="toggleBookMarkState('remove-bookmark')"
-    />
-    }
     <div
       class="play-button"
       [ngStyle]="movieHover ? { display: 'flex' } : { display: 'none' }"
