implemented basic search functionality, still buggy

--- a/src/app/components/home/search/search/search.component.html
+++ b/src/app/components/home/search/search/search.component.html
@@ -1,16 +1,19 @@
-<div class="header-container">
-  <header>
-    <img src="assets/search/icon-search.svg" alt="search icon" />
-    <input
-      type="text"
-      placeholder="Search for movies or TV series"
-      (mouseover)="toggleSearchHover(true)"
-      (focus)="toggleSearchHover(true)"
-      (blur)="toggleSearchHover(false)"
+<form [formGroup]="searchForm" (ngSubmit)="submitSearch()">
+  <div class="header-container">
+    <header>
+      <img src="assets/search/icon-search.svg" alt="search icon" />
+      <input
+        type="text"
+        placeholder="Search for movies or TV series"
+        (mouseover)="toggleSearchHover(true)"
+        (focus)="toggleSearchHover(true)"
+        (blur)="toggleSearchHover(false)"
+        formControlName="search"
+      />
+    </header>
+    <hr
+      id="bottom-hr"
+      [ngStyle]="searchHover ? { opacity: '1' } : { opacity: '0' }"
     />
-  </header>
-  <hr
-    id="bottom-hr"
-    [ngStyle]="searchHover ? { opacity: '1' } : { opacity: '0' }"
-  />
-</div>
+  </div>
+</form>
