--- a/src/app/components/home/search/search/search.component.html
+++ b/src/app/components/home/search/search/search.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="searchForm" (ngSubmit)="submitSearch()">
+<form [formGroup]="searchForm">
   <div class="header-container">
     <header>
       <img src="assets/search/icon-search.svg" alt="search icon" />
