--- a/src/app/pages/layout/layout/layout.component.css
+++ b/src/app/pages/layout/layout/layout.component.css
@@ -9,3 +9,12 @@ section{
     flex-direction: column;
     overflow-x: hidden;
 }
+
+@media (max-width: 861px) {
+    main{
+        flex-direction: column;
+    }
+
+    section{
+    }
+}
