--- a/src/app/components/home/navbar/navbar/navbar.component.css
+++ b/src/app/components/home/navbar/navbar/navbar.component.css
@@ -64,3 +64,60 @@ section img:hover{
     border: 1px solid var(--pure-white);
     margin-top: auto;
 }
+
+@media (max-width: 861px) {
+.nav-container{
+    height: 100%;
+    width: 100%;
+    padding:24px;
+}
+
+aside{
+    width: 100%;
+    height: 72px;
+    max-width: none;
+    flex-direction: row;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    padding-left: 24px;
+    padding-right: 24px;
+    justify-content: space-between;
+}
+
+section{
+    width: 172.92px;
+    height: 20px;
+    flex-direction: row;
+    margin-top: 0px;
+}
+
+#avatar{
+    margin-top: 0px;
+}
+}
+
+@media (max-width: 450px) {
+    .nav-container{
+        padding: 0px;
+    }
+
+    aside{
+        border-radius: 0px;
+    }
+
+    #red-logo{
+        width: 25px !important;
+        height: 20px !important;
+    }
+
+    section{
+        height: 16px;
+        width: 133.563px;
+    }
+
+    #avatar{
+        height: 24px;
+        width: 24px;
+    }
+
+}
