--- a/src/app/components/home/recommended/recommended/recommended.component.css
+++ b/src/app/components/home/recommended/recommended/recommended.component.css
@@ -10,4 +10,44 @@ section{
     display: grid;
     gap: 40px;
     padding-right: 36px;
+    padding-bottom: 56px;
+}
+
+@media (max-width: 1159px){
+    section{
+        grid-template-columns: repeat(3, 1fr);
+        gap: 29px;
+    }
+}
+
+@media(max-width: 861px){
+    main{
+        margin-top: 39px;
+        padding-left: 25px;
+    }
+    section{
+        padding-right: 25px;
+    }
+}
+
+@media(max-width: 660px){
+    section{
+        grid-template-columns: repeat(2, 1fr);
+        gap: 15px;
+    }
+}
+
+@media(max-width: 450px){
+    main{
+        margin-top: 24px;
+        padding-left: 16px;
+    }
+    h1{
+        font-size: 20px;
+    }
+    section{
+        margin-top: 24px;
+        padding-right: 16px;
+        padding-bottom: 61px;
+    }
 }
