--- a/src/app/components/home/trending/trending-movie/trending-movie/trending-movie.component.css
+++ b/src/app/components/home/trending/trending-movie/trending-movie/trending-movie.component.css
@@ -22,6 +22,7 @@ article{
     flex-direction: column;
     cursor: pointer;
     position: relative;
+    border-radius: 8px;
 }
 
 /* background: linear-gradient(0deg, rgba(0, 0, 0, 0.50) 0%, rgba(0, 0, 0, 0.50) 100%) */
@@ -38,7 +39,6 @@ article{
 }
 
 .movie-info > h5:nth-child(2){
-    border: 2px solid red;
 }
 
 article > .overlay > h2{
@@ -68,4 +68,27 @@ article > .overlay > h2{
     opacity: 1 !important;
     margin-left: 19px;
     font-weight: 400;
+}
+
+@media(max-width: 450px){
+    article{
+        height: 140px;
+        width: 240px;
+    }
+    h5{
+        font-size: 12px;
+    }
+    h2{
+        font-size: 15px;
+    }
+
+    .overlay{
+        padding-top: 8px;
+        padding-left: 16px;
+        padding-right: 8px;
+        padding-bottom: 16px;
+    }
+    h4{
+        font-size: 15px;
+    }
 }
