--- a/src/app/pages/search/search/search.component.css
+++ b/src/app/pages/search/search/search.component.css
@@ -12,4 +12,45 @@ section{
     grid-template-columns: repeat(4, 1fr);
     gap: 40px;
     display: grid;
+    padding-bottom: 56px;
+}
+
+@media (max-width: 1159px) {
+    section{
+        grid-template-columns: repeat(3,1fr);
+        gap: 29px;
+    }
+}
+
+@media (max-width: 861px){
+    header{
+        padding-left: 25px;
+    }
+    section{
+        padding-left: 25px;
+        padding-right: 25px;
+        margin-top: 24px;
+    }
+}
+
+@media(max-width: 660px){
+    section{
+        grid-template-columns: repeat(2, 1fr);
+        gap: 15px;
+    }
+}
+
+@media (max-width: 450px){
+    header{
+        margin-top: 10px;
+        padding-left: 16px;
+    }
+    header > h1{
+        font-size: 20px;
+    }
+    section{
+        padding-left: 16px;
+        padding-right: 16px;
+        margin-top: 24px;
+    }
 }
