--- a/src/app/shared/components/movie/recommended-movie.component.css
+++ b/src/app/shared/components/movie/recommended-movie.component.css
@@ -1,6 +1,6 @@
 article{
     width: 100%;
-    min-width: 280px;
+    /* min-width: 280px; */
     border-radius: 8px;
     height: 174px;
 }
@@ -66,4 +66,25 @@ h2{
     opacity: 1 !important;
     margin-left: 19px;
     font-weight: 400;
+}
+
+@media (max-width: 450px){
+    article{
+        height: 110px;
+    }
+
+    .overlay{
+        padding-top: 8px;
+        padding-right: 8px;
+    }
+
+    h4{
+        font-size: 15px;
+    }
+    h5{
+        font-size: 11px;
+    }
+    h2{
+        font-size: 15px;
+    }
 }
