added click movie hover for mobile

--- a/src/app/shared/components/movie/recommended-movie.component.html
+++ b/src/app/shared/components/movie/recommended-movie.component.html
@@ -1,4 +1,5 @@
 <article
+  (click)="clickMovieHover()"
   (mouseenter)="toggleMovieHover(true)"
   (mouseleave)="toggleMovieHover(false)"
   [ngStyle]="{
