--- a/src/app/components/home/trending/trending-movie/trending-movie/trending-movie.component.html
+++ b/src/app/components/home/trending/trending-movie/trending-movie/trending-movie.component.html
@@ -1,4 +1,5 @@
 <article
+  (click)="clickMovieHover()"
   (mouseenter)="toggleMovieHover(true)"
   (mouseleave)="toggleMovieHover(false)"
   [ngStyle]="{
